--- a/WEB/Views/Home/Index.cshtml
+++ b/WEB/Views/Home/Index.cshtml
@@ -5,14 +5,14 @@
 <div class="jumbotron">
     <h1>System for testing students</h1>
     <p class="lead">Check out our students in student group...</p>
-    @Html.ActionLink("See the student group >>", "StudentGroups", "StudentGoup")
+    @Html.ActionLink("See the student groups >>", "StudentGroups", "StudentGoup")
 </div>
 
 <div class="row">
     <div class="col-md-4">
         <h2>Thematic fields</h2>
         <p class="lead">
-          
+            @Html.ActionLink("See the thematic fields >>", "ThematicFields", "ThematicField")
         </p>
     </div>
 </div>
