--- a/WEB/Views/Shared/_Layout.cshtml
+++ b/WEB/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <li>@Html.ActionLink("Student groups", "StudentGroups", "StudentGoup")</li>
                 </ul>
                 <ul class="nav navbar-nav">
-                    <li></li>
+                    <li>@Html.ActionLink("Thematic fields", "ThematicFields", "ThematicField")</li>
                 </ul>
             </div>
         </div>
