--- a/WEB/Views/Home/Index.cshtml
+++ b/WEB/Views/Home/Index.cshtml
@@ -4,13 +4,21 @@
 
 <div class="jumbotron">
     <h1>System for testing students</h1>
-    <p class="lead">Check out our students in student group...</p>
+    <p class="lead">
+        <span class="glyphicon glyphicon-user">
+        </span> Check out our students in student groups...
+    </p>
+
+    
     @Html.ActionLink("See the student groups >>", "StudentGroups", "StudentGoup")
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Thematic fields</h2>
+        <h3>
+            <span class="glyphicon glyphicon-list-alt">
+            </span> Thematic fields for students
+        </h3>
         <p class="lead">
             @Html.ActionLink("See the thematic fields >>", "ThematicFields", "ThematicField")
         </p>
