--- a/WEB/Views/StudentGoup/StudentGroups.cshtml
+++ b/WEB/Views/StudentGoup/StudentGroups.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Our student groups:</h2>
 
-<table class="table">
+<table class="table table-striped">
     <tr>
         <th>
             Name
