added buttons to home page

--- a/WEB/Views/Home/Index.cshtml
+++ b/WEB/Views/Home/Index.cshtml
@@ -8,9 +8,9 @@
         <span class="glyphicon glyphicon-user">
         </span> Check out our students in student groups...
     </p>
-
+    <button type="button" class="btn btn-default"> @Html.ActionLink("See the student groups", "StudentGroups", "StudentGoup")</button>
     
-    @Html.ActionLink("See the student groups >>", "StudentGroups", "StudentGoup")
+    
 </div>
 
 <div class="row">
@@ -20,7 +20,7 @@
             </span> Thematic fields for students
         </h3>
         <p class="lead">
-            @Html.ActionLink("See the thematic fields >>", "ThematicFields", "ThematicField")
+            <button type="button" class="btn btn-default"> @Html.ActionLink("See the thematic fields", "ThematicFields", "ThematicField")</button>
         </p>
     </div>
 </div>
