--- a/WEB/Views/Shared/_Layout.cshtml
+++ b/WEB/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Student groups", "StudentGroups", "StudentGoup")</li>
+                    <li>@Html.ActionLink("Student groups", "StudentGroups", "StudentGroup")</li>
                 </ul>
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Thematic fields", "ThematicFields", "ThematicField")</li>
